...
    <Button
        android:id="@+id/allTaskButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:text="@string/all_task"
        app:layout_constraintBottom_toBottomOf="@+id/addTaskButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/addTaskButton" />

    <Button
        android:id="@+id/addTaskButton"
...
        app:layout_constraintStart_toEndOf="@+id/homeTaskTitle"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@android:drawable/ic_menu_edit"
        tools:ignore="ImageContrastCheck" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="212dp"
        android:layout_height="289dp"
        android:layout_marginStart="81dp"
        android:layout_marginTop="29dp"
        android:layout_marginEnd="118dp"
        android:layout_marginBottom="142dp"
...
